# dm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.sh  package.sh
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
docs/: OFFLINE-DEVELOPMENT.md  PLUGIN-GUIDE.md
scripts/: _lib.sh  dm.conf.default  install.sh  prepare-offline-deps.sh  uninstall.sh
scripts/container/: .dm.toml  container.sh
scripts/environment/: .dm.toml  env.sh
scripts/log/: .dm.toml  log.pl
scripts/middleware/: .dm.toml  middleware.sh
scripts/network/: .dm.toml  network.sh
scripts/resource/: .dm.toml  hardware.sh
scripts/schedule/: .dm.toml  schedule.sh
scripts/security/: .dm.toml  security.pl
scripts/service/: .dm.toml  service.sh
scripts/smart-check/: .dm.toml  smart-check.pl
scripts/system/: .dm.toml  system.sh
src/: anomaly.rs  check_config_store.rs  config.rs  java_analyzer.rs  main.rs  maintenance.rs
src/checks/: business_check.rs  common.rs  container.rs  elasticsearch.rs  environment.rs  java_service.rs  kafka_check.rs  keepalived_check.rs  middleware.rs  mod.rs  mysql_check.rs  network.rs  nginx_check.rs  redis_check.rs  resource.rs  schedule.rs  security.rs  service.rs  service_manage.rs  smart_check.rs  system.rs
src/cli/: check.rs  check_config.rs  clean.rs  docs_cmd.rs  duplicate.rs  info.rs  java.rs  list.rs  logs.rs  maintenance.rs  mod.rs  run.rs  serve.rs  stats.rs  util.rs  version.rs
src/dashboard/: mod.rs
src/db/: mod.rs
src/docs/: mod.rs
web/: index.html  package-lock.json  package.json  vite.config.js
(+29 files in other folders)
